# mccormick_optimization

./: README.md  app.py  pyproject.toml  scrape_choosechicago.py  transport_radius.py
assets/: map.html
data/: choose_chicago_events.json  cta_bus_stops.csv  mock_events.json  mock_events_generator.ipynb
utils/: google_utils.py  route_map.html  route_utils.py  transit_route.ipynb  transport_radius.py
